tests/error/struct_errors/invalid_generic.err
Error: Expected a type parameter (at $FILE:14:23)
   | 
12 | 
13 | @guppy.struct(module)
14 | class MyStruct(Generic[X]):
   |                        ^ Expected a type parameter

Guppy compilation failed due to 1 previous error
